--- a/atividade1.index.html
+++ b/atividade1.index.html
@@ -7,10 +7,15 @@
     <h1> Dança é a arte de movimentar expressivamente o corpo seguindo movimentos ritmados, em geral ao som de música. </h1>
     <h1> Tipos de dança </h1>
     <h2> Vamos listar algumas das danças mais conhecidas e praticadas atualmente: </h2>
-    <h2> Balé: originou-se no século XVI, durante o Renascimento, e sofreu inúmeras modificações ao longo do tempo. Hoje, existem muitos estilos de balé, dentre os quais o clássico e o contemporâneo. </h2>
-    <h2> Dança contemporânea: surgida nos anos 1960, a dança contemporânea é hoje uma das mais praticadas e estudadas pelos profissionais da dança. É caracterizada pela mistura de estilos e pela improvisação. </h2>
-    <h2> Jazz: popularizado nos Estados Unidos no início do século XX, o jazz é fruto da mistura de elementos de origem africana e europeia, como o balé e a dança moderna. </h2>
-    <h2> Dança moderna: os movimentos de dança moderna nascem, no início do século XX, como uma reação a algumas limitações e regras do balé. Caracteriza-se pela maior liberdade dos movimentos. A pioneira da dança moderna é a dançarina norte-americana Isadora Duncan. </h2>
-    <h2> Dança de salão: dança de salão é um nome genérico que se dá a diversos estilos de dança em dupla, como a gafieira, a sala, o samba, a rumba, o forró, o tango e o bolero. Atualmente, há diversas escolas que ensinam dança de salão e clubes onde as pessoas se reúnem para praticar e se divertir. <h2>
+    <h1> Balé: </h1>
+    <h2> Originou-se no século XVI, durante o Renascimento, e sofreu inúmeras modificações ao longo do tempo. Hoje, existem muitos estilos de balé, dentre os quais o clássico e o contempo<rân1eo./h1 </h2
+    <h1> Dança contemporânea: </h1>
+    <h2> Surgida nos anos 1960, a dança contemporânea é hoje uma das mais praticadas e estudadas pelos profissionais da dança. É caracterizada pela mistura de estilos e pela improvisação. </h2>
+    <h1> Jazz: </h1>
+    <h2> Popularizado nos Estados Unidos no início do século XX, o jazz é fruto da mistura de elementos de origem africana e europeia, como o balé e a dança moderna. </h2>
+    <h1> Dança moderna: </h1> 
+    <h2> Os movimentos de dança moderna nascem, no início do século XX, como uma reação a algumas limitações e regras do balé. Caracteriza-se pela maior liberdade dos movimentos. A pioneira da dança moderna é a dançarina norte-americana Isadora Duncan. </h2>
+    <h1> Dança de salão: </h1>
+    <h2> Dança de salão é um nome genérico que se dá a diversos estilos de dança em dupla, como a gafieira, a sala, o samba, a rumba, o forró, o tango e o bolero. Atualmente, há diversas escolas que ensinam dança de salão e clubes onde as pessoas se reúnem para praticar e se divertir. <h2>
    </body>
 </html>
