--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h2> Vamos listar algumas das danças mais conhecidas e praticadas atualmente: </h2>
     <h1 class="linha1"> Balé: </h1>
     <h2> Originou-se no século XVI, durante o Renascimento, e sofreu inúmeras modificações ao longo do tempo. Hoje, existem muitos estilos de balé, dentre os quais o clássico e o contempo<rân1eo./h1 </h2
-    <h1> Dança contemporânea: </h1>
+    <h1 class="linha1"> Dança contemporânea: </h1>
     <h2> Surgida nos anos 1960, a dança contemporânea é hoje uma das mais praticadas e estudadas pelos profissionais da dança. É caracterizada pela mistura de estilos e pela improvisação. </h2>
     <h1> Jazz: </h1>
     <h2> Popularizado nos Estados Unidos no início do século XX, o jazz é fruto da mistura de elementos de origem africana e europeia, como o balé e a dança moderna. </h2>
