--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1> Dança é a arte de movimentar expressivamente o corpo seguindo movimentos ritmados, em geral ao som de música. </h1>
     <h1 class="linha2"> Tipos de dança </h1>
     <h2> Vamos listar algumas das danças mais conhecidas e praticadas atualmente: </h2>
-    <h1 class="linha1"> Balé: </h1>
+    <h1 class="linha1"> Ballet: </h1>
     <h2> Originou-se no século XVI, durante o Renascimento, e sofreu inúmeras modificações ao longo do tempo. Hoje, existem muitos estilos de balé, dentre os quais o clássico e o contempo<rân1eo./h1 </h2
     <h1 class="linha1"> Dança contemporânea: </h1>
     <h2> Surgida nos anos 1960, a dança contemporânea é hoje uma das mais praticadas e estudadas pelos profissionais da dança. É caracterizada pela mistura de estilos e pela improvisação. </h2>
