--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Atividade </title>
+    <title> Atividade 1 </title>
     <style type="text/css">
       .linha1 {
        background-color: #00BFFF;
@@ -12,7 +12,7 @@
      
    </style>
   </head>
-  <body> 
+  <body bgcolor="#FFC0CB"> 
     <h1> Dança é a arte de movimentar expressivamente o corpo seguindo movimentos ritmados, em geral ao som de música. </h1>
     <h1 class="linha2"> Tipos de dança </h1>
     <h2> Vamos listar algumas das danças mais conhecidas e praticadas atualmente: </h2>
