--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      
    </style>
   </head>
-  <body bgcolor="#FFC0CB"> 
+  <body bgcolor="#FFFAF0"> 
     <h1> Dança é a arte de movimentar expressivamente o corpo seguindo movimentos ritmados, em geral ao som de música. </h1>
     <h1 class="linha2"> Tipos de dança </h1>
     <h2> Vamos listar algumas das danças mais conhecidas e praticadas atualmente: </h2>
