--- a/index.html
+++ b/index.html
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
-    <title> Atividade 1 </title>
-    <style type="text/css">
-      .linha1 {
-       background-color: #00BFFF;
-      }
-      .linha2 {
-        background-color: #00FF7F;
-      }
-   </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Atividade 2 </title>
   </head>
-  <body bgcolor="#FFFAF0"> 
-    <h1> Dança é a arte de movimentar expressivamente o corpo seguindo movimentos ritmados, em geral ao som de música. </h1>
-    <h1 class="linha2"> Tipos de dança </h1>
-    <h2> Vamos listar algumas das danças mais conhecidas e praticadas atualmente: </h2>
-    <h1 class="linha1"> Ballet: </h1>
-    <h2> Originou-se no século XVI, durante o Renascimento, e sofreu inúmeras modificações ao longo do tempo. Hoje, existem muitos estilos de balé, dentre os quais o clássico e o contemporâneo. </h2>
-    <h1 class="linha1"> Dança contemporânea: </h1>
-    <h2> Surgida nos anos 1960, a dança contemporânea é hoje uma das mais praticadas e estudadas pelos profissionais da dança. É caracterizada pela mistura de estilos e pela improvisação. </h2>
-    <h1 class="linha1"> Jazz: </h1>
-    <h2> Popularizado nos Estados Unidos no início do século XX, o jazz é fruto da mistura de elementos de origem africana e europeia, como o balé e a dança moderna. </h2>
-    <h1 class="linha1"> Dança moderna: </h1> 
-    <h2> Os movimentos de dança moderna nascem, no início do século XX, como uma reação a algumas limitações e regras do balé. Caracteriza-se pela maior liberdade dos movimentos. A pioneira da dança moderna é a dançarina norte-americana Isadora Duncan. </h2>
-    <h1 class="linha1"> Dança de salão: </h1>
-    <h2> Dança de salão é um nome genérico que se dá a diversos estilos de dança em dupla, como a gafieira, a sala, o samba, a rumba, o forró, o tango e o bolero. Atualmente, há diversas escolas que ensinam dança de salão e clubes onde as pessoas se reúnem para praticar e se divertir. <h2>
-   </body>
+  <body>
+    <h1> Sumário </h1>
+    <ol< </ol>
+    <h1> Goiaba </h1>
+    <h2> A goiaba branca contém mais vitamina C do que a vermelha, que por sua vez possui grande quantidade de licopeno, que é um antioxidante importante para o organismo por combater os radicais livres do corpo. </h2>
+    <h1> Laranja </h1>
+    <h2> A laranja é uma fruta abundante em vitamina C, é ainda rica em flavonóides, minerais e antioxidantes que fortalecem o sistema imunitário, prevenindo assim o aparecimento de várias doenças. </h2>
+    <h1> Manga </h1>
+    <h2> A manga é uma fruta tropical rica em vitamina A, C, minerais (potássio, cobre e ferro), betacaroteno e fibras. Em cada 100 gramas de manga, 13g são de carboidratos, 2g são fibras, 1g de proteínas e, praticamente não contém gorduras. </h2>
+    <h1> Maracujá </h1>
+    <h2> O maracujá é uma fruta que faz parte das plantas do gênero Passiflora. Grande número de espécies de maracujá é conhecida e utilizada para diferentes finalidades, dividindo-se, basicamente, em comestíveis, medicinais ou de uso na indústria para a fabricação de produtos de beleza. </h2>
+    <h1> Pera </h1>
+    <h2>  É uma fruta que fornece nutrientes importantes para a saúde como vitamina A, E, C, fibras, potássio, magnésio e cálcio. Além disso, as peras contêm carotenoides e flavonoides, que são compostos antioxidantes que oferecem vários benefícios à saúde. </h2>
+    <h1> Abacate </h1>
+    <h2> O abacate é constantemente apontado como vilão da dieta, especialmente devido ao alto teor de gordura. Mas a fama é injusta. O abacate por si só não engorda. É verdade que enquanto boa parte das frutas é rica em carboidratos, o abacate é rico em lipídios. </h2>
+    
+  </body>
 </html>
