--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Atividade 2 </title>
-  </head>
-  <body>
-    <h1> Sumário </h1>
+ </head>
+ <body>
+    <h1> Sumário: </h1>
     <ol< </ol>
     <h1> Goiaba </h1>
     <h2> A goiaba branca contém mais vitamina C do que a vermelha, que por sua vez possui grande quantidade de licopeno, que é um antioxidante importante para o organismo por combater os radicais livres do corpo. </h2>
@@ -21,6 +21,7 @@
     <h2>  É uma fruta que fornece nutrientes importantes para a saúde como vitamina A, E, C, fibras, potássio, magnésio e cálcio. Além disso, as peras contêm carotenoides e flavonoides, que são compostos antioxidantes que oferecem vários benefícios à saúde. </h2>
     <h1> Abacate </h1>
     <h2> O abacate é constantemente apontado como vilão da dieta, especialmente devido ao alto teor de gordura. Mas a fama é injusta. O abacate por si só não engorda. É verdade que enquanto boa parte das frutas é rica em carboidratos, o abacate é rico em lipídios. </h2>
-    
-  </body>
+    <script>
+      
+</body>
 </html>
