--- a/index.html
+++ b/index.html
@@ -6,21 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Atividade 2 </title>
  </head>
+ <style type="text/css">
+      .linha1 {
+       background-color: #00BFFF;
+      }
+      .linha2 {
+        background-color: #00FF7F;
+      }
+ </style> 
  <body>
     <h1> Sumário: </h1>
     <ol< </ol>
-    <h1> Goiaba </h1>
-    <h2> A goiaba branca contém mais vitamina C do que a vermelha, que por sua vez possui grande quantidade de licopeno, que é um antioxidante importante para o organismo por combater os radicais livres do corpo. </h2>
+    <h1 class="linha1"> Goiaba </h1>
+    <p> A goiaba branca contém mais vitamina C do que a vermelha, que por sua vez possui grande quantidade de licopeno, que é um antioxidante importante para o organismo por combater os radicais livres do corpo. </p>
     <h1> Laranja </h1>
-    <h2> A laranja é uma fruta abundante em vitamina C, é ainda rica em flavonóides, minerais e antioxidantes que fortalecem o sistema imunitário, prevenindo assim o aparecimento de várias doenças. </h2>
+    <p> A laranja é uma fruta abundante em vitamina C, é ainda rica em flavonóides, minerais e antioxidantes que fortalecem o sistema imunitário, prevenindo assim o aparecimento de várias doenças. </p>
     <h1> Manga </h1>
-    <h2> A manga é uma fruta tropical rica em vitamina A, C, minerais (potássio, cobre e ferro), betacaroteno e fibras. Em cada 100 gramas de manga, 13g são de carboidratos, 2g são fibras, 1g de proteínas e, praticamente não contém gorduras. </h2>
+    <p> A manga é uma fruta tropical rica em vitamina A, C, minerais (potássio, cobre e ferro), betacaroteno e fibras. Em cada 100 gramas de manga, 13g são de carboidratos, 2g são fibras, 1g de proteínas e, praticamente não contém gorduras. </p>
     <h1> Maracujá </h1>
-    <h2> O maracujá é uma fruta que faz parte das plantas do gênero Passiflora. Grande número de espécies de maracujá é conhecida e utilizada para diferentes finalidades, dividindo-se, basicamente, em comestíveis, medicinais ou de uso na indústria para a fabricação de produtos de beleza. </h2>
+    <p> O maracujá é uma fruta que faz parte das plantas do gênero Passiflora. Grande número de espécies de maracujá é conhecida e utilizada para diferentes finalidades, dividindo-se, basicamente, em comestíveis, medicinais ou de uso na indústria para a fabricação de produtos de beleza. </p>
     <h1> Pera </h1>
-    <h2>  É uma fruta que fornece nutrientes importantes para a saúde como vitamina A, E, C, fibras, potássio, magnésio e cálcio. Além disso, as peras contêm carotenoides e flavonoides, que são compostos antioxidantes que oferecem vários benefícios à saúde. </h2>
+    <p>  É uma fruta que fornece nutrientes importantes para a saúde como vitamina A, E, C, fibras, potássio, magnésio e cálcio. Além disso, as peras contêm carotenoides e flavonoides, que são compostos antioxidantes que oferecem vários benefícios à saúde. </p>
     <h1> Abacate </h1>
-    <h2> O abacate é constantemente apontado como vilão da dieta, especialmente devido ao alto teor de gordura. Mas a fama é injusta. O abacate por si só não engorda. É verdade que enquanto boa parte das frutas é rica em carboidratos, o abacate é rico em lipídios. </h2>
+    <p> O abacate é constantemente apontado como vilão da dieta, especialmente devido ao alto teor de gordura. Mas a fama é injusta. O abacate por si só não engorda. É verdade que enquanto boa parte das frutas é rica em carboidratos, o abacate é rico em lipídios. </p>
     <script>
       
 </body>
