--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Atividade 2 </title>
  </head>
+ <style type="text/css">
+      .linha1 {
+       background-color: #FFDEAD;
+      }
+ </style>
  <body>
     <h1> Sumário: </h1>
     <ol> </ol>
