--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       }
  </style>
  <body>
-    <h1> ÍNDICE: </h1>
+    <h1> Índice: </h1>
     <ol> </ol>
     <h2 class="linha1"> Goiaba </h2>
     <p> A goiaba branca contém mais vitamina C do que a vermelha, que por sua vez possui </p>
