--- a/index.html
+++ b/index.html
@@ -15,29 +15,17 @@
     <h1> Índice: </h1>
     <ol> </ol>
     <h2 class="linha1"> Goiaba </h2>
-    <p> A goiaba branca contém mais vitamina C do que a vermelha, que por sua vez possui </p>
-    <p> grande quantidade de licopeno, que é um antioxidante importante para o organismo </p>
-    <p> por combater os radicais livres do corpo. </p>
+    <p> A goiaba branca contém mais vitamina C do que a vermelha, que por sua vez possui grande quantidade de licopeno, que é um antioxidante importante para o organismo por combater os radicais livres do corpo. </p>
     <h2 class="linha1"> Laranja </h2>
-    <p> A laranja é uma fruta abundante em vitamina C, é ainda rica em flavonóides, </p>
-    <p> minerais e antioxidantes que fortalecem o sistema imunitário, prevenindo </p>
-    <p> assim o aparecimento de várias doenças. </p>
+    <p> A laranja é uma fruta abundante em vitamina C, é ainda rica em flavonóides, minerais e antioxidantes que fortalecem o sistema imunitário, prevenindo assim o aparecimento de várias doenças. </p>
     <h2 class="linha1"> Manga </h2>
-    <p> A manga é uma fruta tropical rica em vitamina A, C, minerais (potássio, cobre e ferro), </p>
-    <p> betacaroteno e fibras. Em cada 100 gramas de manga, </p>
-    <p> 13g são de carboidratos, 2g são fibras, 1g de proteínas e, </p>
-    <p> praticamente não contém gorduras. </p>
+    <p> A manga é uma fruta tropical rica em vitamina A, C, minerais (potássio, cobre e ferro), betacaroteno e fibras. Em cada 100 gramas de manga, 13g são de carboidratos, 2g são fibras, 1g de proteínas e, praticamente não contém gorduras. </p>
     <h2 class="linha1"> Maracujá </h2>
-    <p> O maracujá é uma fruta que faz parte das plantas do gênero Passiflora. </p>
-    <p> Grande número de espécies de maracujá é conhecida e utilizada para diferentes finalidades, </p>
-    <p> dividindo-se, basicamente, em comestíveis, medicinais ou de uso na indústria </p>
-    <p> para a fabricação de produtos de beleza. </p>
+    <p> O maracujá é uma fruta que faz parte das plantas do gênero Passiflora. Grande número de espécies de maracujá é conhecida e utilizada para diferentes finalidades, dividindo-se, basicamente, em comestíveis, medicinais ou de uso na indústria para a fabricação de produtos de beleza. </p>
     <h2 class="linha1"> Pera </h2>
-    <p> É uma fruta que fornece nutrientes importantes para a saúde como vitamina A, E, C, fibras, potássio, magnésio e cálcio. </p>
-    <p> Além disso, as peras contêm carotenoides e flavonoides, que são compostos antioxidantes que oferecem vários benefícios à saúde. </p>
+    <p> É uma fruta que fornece nutrientes importantes para a saúde como vitamina A, E, C, fibras, potássio, magnésio e cálcio. Além disso, as peras contêm carotenoides e flavonoides, que são compostos antioxidantes que oferecem vários benefícios à saúde. </p>
     <h2 class="linha1"> Abacate </h2>
-    <p> O abacate é constantemente apontado como vilão da dieta, especialmente devido ao alto teor de gordura. Mas a fama é injusta. </p> 
-    <p> O abacate por si só não engorda. É verdade que enquanto boa parte das frutas é rica em carboidratos, o abacate é rico em lipídios. </p>
+    <p> O abacate é constantemente apontado como vilão da dieta, especialmente devido ao alto teor de gordura. Mas a fama é injusta. O abacate por si só não engorda. É verdade que enquanto boa parte das frutas é rica em carboidratos, o abacate é rico em lipídios. </p>
     <script>
         const subtitulos = document.querySelectorAll('h2');
         const topicos = new Array();
