--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     <h1> Índice: </h1>
     <ol> 
         <a href="#UM"> </a>
-        
+        <a href="#DOIS"> </a>
+        <a href="#TRÊS"> </a>
+        <a href="#QUATRO"> </a>
+        <a href="#CINCO"> </a>
+        <a href="#SEIS"> </a>   
     </ol>
     <br> <br>
     <h2 class="linha1"> <a name="UM"> Goiaba </a> </h2>
