--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
  <body>
     <h1> Índice: </h1>
     <ol> 
-        <a href="#UM"> </a>
-        <a href="#DOIS"> </a>
-        <a href="#TRÊS"> </a>
-        <a href="#QUATRO"> </a>
-        <a href="#CINCO"> </a>
-        <a href="#SEIS"> </a>   
+        <li> <a href="#UM"> Goiaba </a> </li>
+        <li> <a href="#DOIS"> Laranja </a> </li>
+        <li> <a href="#TRÊS"> Manga </a> </li>
+        <li> <a href="#QUATRO"> Maracujá </a> </li>
+        <li> <a href="#CINCO"> Pera </a> </li>
+        <li> <a href="#SEIS"> Abacate </a> </li> 
     </ol>
     <br> <br>
     <h2 class="linha1"> <a name="UM"> Goiaba </a> </h2>
