--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         subtitulos.forEach(subtitulo => {
             topicos.push(subtitulo.textContent);
         });
-        lista = document.querySelector('ol');
+        const lista = document.querySelector('ol');
         topicos.forEach(topico => {
             const item = document.createElement('li');
-            item.innerHTML = '<a href="# ' + topico + ' ">' + topico + '</a>';
+            item.innerHTML = '<a href="#' + topico + '">' + topico + '</a>';
             lista.append(item);
         });
     </script>
