--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <br> <br>
     <h2 class="linha1" id="Goiaba">Goiaba</h2>
     <p> A goiaba branca contém mais vitamina C do que a vermelha, que por sua vez possui grande quantidade de licopeno, que é um antioxidante importante para o organismo por combater os radicais livres do corpo. </p>
+    <h2 id="Retornar">Retornar</h2>
     <br> <br>
     <h2 class="linha1" id="Laranja">Laranja</h2>
     <p> A laranja é uma fruta abundante em vitamina C, é ainda rica em flavonóides, minerais e antioxidantes que fortalecem o sistema imunitário, prevenindo assim o aparecimento de várias doenças. </p>
