--- a/index.html
+++ b/index.html
@@ -16,22 +16,27 @@
     <ol> </ol>
     <br> <br>
     <h2 class="linha1" id="Goiaba">Goiaba</h2>
-    <p> A goiaba branca contém mais vitamina C do que a vermelha, que por sua vez possui grande quantidade de licopeno, que é um antioxidante importante para o organismo por combater os radicais livres do corpo. </p>
-    <h2 id="Retornar">Retornar</h2>
+    <p id="Retornar">Retornar</p>
+    <p> A goiaba branca contém mais vitamina C do que a vermelha, que por sua vez possui grande quantidade de licopeno, que é um antioxidante importante para o organismo por combater os radicais livres do corpo. </p> 
     <br> <br>
     <h2 class="linha1" id="Laranja">Laranja</h2>
+    <p id="Retornar">Retornar</p>
     <p> A laranja é uma fruta abundante em vitamina C, é ainda rica em flavonóides, minerais e antioxidantes que fortalecem o sistema imunitário, prevenindo assim o aparecimento de várias doenças. </p>
     <br> <br>
     <h2 class="linha1" id="Manga">Manga</h2>
+    <p id="Retornar">Retornar</p>
     <p> A manga é uma fruta tropical rica em vitamina A, C, minerais (potássio, cobre e ferro), betacaroteno e fibras. Em cada 100 gramas de manga, 13g são de carboidratos, 2g são fibras, 1g de proteínas e, praticamente não contém gorduras. </p>
     <br> <br>
     <h2 class="linha1" id="Maracujá">Maracujá</h2>
+    <p id="Retornar">Retornar</p>
     <p> O maracujá é uma fruta que faz parte das plantas do gênero Passiflora. Grande número de espécies de maracujá é conhecida e utilizada para diferentes finalidades, dividindo-se, basicamente, em comestíveis, medicinais ou de uso na indústria para a fabricação de produtos de beleza. </p>
     <br> <br>
     <h2 class="linha1" id="Pera">Pera</h2>
+    <p id="Retornar">Retornar</p>
     <p> É uma fruta que fornece nutrientes importantes para a saúde como vitamina A, E, C, fibras, potássio, magnésio e cálcio. Além disso, as peras contêm carotenoides e flavonoides, que são compostos antioxidantes que oferecem vários benefícios à saúde. </p>
     <br> <br>
     <h2 class="linha1" id="Abacate">Abacate</h2>
+    <p id="Retornar">Retornar</p>
     <p> O abacate é constantemente apontado como vilão da dieta, especialmente devido ao alto teor de gordura. Mas a fama é injusta. O abacate por si só não engorda. É verdade que enquanto boa parte das frutas é rica em carboidratos, o abacate é rico em lipídios. </p>
     <br> <br>
      
