--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
        background-color: #FFDEAD;
       }
  </style>
- <body>
+ <body bgcolor="#FFF8DC">
     <h1> Índice: </h1>
     <ol> </ol>
     <br> <br>
@@ -40,18 +40,6 @@
     <p> O abacate é constantemente apontado como vilão da dieta, especialmente devido ao alto teor de gordura. Mas a fama é injusta. O abacate por si só não engorda. É verdade que enquanto boa parte das frutas é rica em carboidratos, o abacate é rico em lipídios. </p>
     <br> <br>
      
-     <script>
-        const subtitulos = document.querySelectorAll('h2');
-        const topicos = new Array();
-        subtitulos.forEach(subtitulo => {
-            topicos.push(subtitulo.textContent);
-        });
-        const lista = document.querySelector('ol');
-        topicos.forEach(topico => {
-            const item = document.createElement('li');
-            item.innerHTML = '<a href="#' + topico + '">' + topico + '</a>';
-            lista.append(item);
-        });
-    </script>
+    <script scr="atvd2.js"> </script>
 </body>
 </html>
