--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
     <p> O abacate é constantemente apontado como vilão da dieta, especialmente devido ao alto teor de gordura. Mas a fama é injusta. O abacate por si só não engorda. É verdade que enquanto boa parte das frutas é rica em carboidratos, o abacate é rico em lipídios. </p>
     <br> <br>
      
-    <script scr="atvd2.js"> </script>
+    <script src="atvd2.js"> </script>
 </body>
 </html>
