--- a/damas.html
+++ b/damas.html
@@ -6,6 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Jogo de damas </title>
 </head>
-<body bgcolor="	#836FFF"> <script src="damas.js"> </script> </body>
+<body bgcolor="	#E0FFFF"> <script src="damas.js"> </script> </body>
 </html> 
   
